--- a/resources/views/layout/main.edge
+++ b/resources/views/layout/main.edge
@@ -1,35 +1,190 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="loading" lang="en" data-textdirection="ltr">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+    <meta name="description" content="Chameleon Admin is a modern Bootstrap 4 webapp &amp; admin dashboard html template with a large number of components, elegant design, clean and organized code.">
+    <meta name="keywords" content="admin template, Chameleon admin template, dashboard template, gradient admin template, responsive admin template, webapp, eCommerce dashboard, analytic dashboard">
+    <meta name="author" content="ThemeSelect">
+    <title>NotesGate</title>
+    <link rel="apple-touch-icon" href="theme-assets/images/ico/apple-icon-120.png">
+    <link rel="shortcut icon" type="image/x-icon" href="theme-assets/images/ico/favicon.ico">
+	
+	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i%7CComfortaa:300,400,700" rel="stylesheet">
+    <link href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome.min.css" rel="stylesheet">
 
-<head>
-	<meta charset="UTF-8" />
-	<title>Hello NotesGate</title>
-	{{ style('assets/theme/css/bootstrap.css') }}
-	{{ style('assets/global/css/app.css') }}
-	{{ style('assets/global/css/component.css') }}
+	{{ style('assets/theme/chameleon/theme-assets/css/vendors.css')}}
+    {{ style('assets/theme/chameleon/theme-assets/vendors/css/charts/chartist.css')}}
+    {{ style('assets/theme/chameleon/theme-assets/css/app-lite.css')}}
+    {{ style('assets/theme/chameleon/theme-assets/css/core/menu/menu-types/vertical-menu.css')}}
+    {{ style('assets/theme/chameleon/theme-assets/css/core/colors/palette-gradient.css')}}
+    {{ style('assets/theme/chameleon/theme-assets/css/pages/dashboard-ecommerce.css')}}
 
-
-	{{ style('assets/components/leftbar/css/style-app.css') }}
-	{{ style('assets/components/searchbar/css/searchbar.css') }}
-	{{ style('assets/global/css/media.css') }}
-	{{--  {{ style('assets/theme/css/fa-icon/all.css') }}  --}}
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
-	@!section('style')
 </head>
+  <body class="vertical-layout vertical-menu 2-columns   menu-expanded fixed-navbar" data-open="click" data-menu="vertical-menu" data-color="bg-chartbg" data-col="2-columns">
 
-<body>
-	<div id=web-content class="wrapper">
-		@include('layout._leftbar')
-		@!section('content')
-	</div>
+    <!-- fixed-top-->
+    {{--  <nav class="header-navbar navbar-expand-md navbar navbar-with-menu navbar-without-dd-arrow fixed-top navbar-semi-light">  --}}
+      {{--  <div class="navbar-wrapper">  --}}
+        {{--  <div class="navbar-container content">  --}}
+          {{--  <div class="collapse navbar-collapse show" id="navbar-mobile">  --}}
+            {{--  <ul class="nav navbar-nav mr-auto float-left">  --}}
+              {{--  <li class="nav-item d-block d-md-none"><a class="nav-link nav-menu-main menu-toggle hidden-xs" href="#"><i class="ft-menu"></i></a></li>  --}}
+              {{--  <li class="nav-item d-none d-md-block"><a class="nav-link nav-link-expand" href="#"><i class="ficon ft-maximize"></i></a></li>  --}}
+              {{--  <li class="nav-item dropdown navbar-search"><a class="nav-link dropdown-toggle hide" data-toggle="dropdown" href="#"><i class="ficon ft-search"></i></a>  --}}
+                {{--  <ul class="dropdown-menu">  --}}
+                  {{--  <li class="arrow_box">  --}}
+                    {{--  <form>  --}}
+                      {{--  <div class="input-group search-box">  --}}
+                        {{--  <div class="position-relative has-icon-right full-width">  --}}
+                          {{--  <input class="form-control" id="search" type="text" placeholder="Search here...">  --}}
+                          {{--  <div class="form-control-position navbar-search-close"><i class="ft-x">   </i></div>  --}}
+                        {{--  </div>  --}}
+                      {{--  </div>  --}}
+                    {{--  </form>  --}}
+                  {{--  </li>  --}}
+                {{--  </ul>  --}}
+              {{--  </li>  --}}
+            {{--  </ul>  --}}
+            {{--  <ul class="nav navbar-nav float-right">           --}}
+              {{--  <li class="dropdown dropdown-language nav-item"><a class="dropdown-toggle nav-link" id="dropdown-flag" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="flag-icon flag-icon-us"></i><span class="selected-language"></span></a>  --}}
+                {{--  <div class="dropdown-menu" aria-labelledby="dropdown-flag">  --}}
+                  {{--  <div class="arrow_box"><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-us"></i> English</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-cn"></i> Chinese</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-ru"></i> Russian</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-fr"></i> French</a><a class="dropdown-item" href="#"><i class="flag-icon flag-icon-es"></i> Spanish</a></div>  --}}
+                {{--  </div>  --}}
+              {{--  </li>  --}}
+            {{--  </ul>  --}}
+            {{--  <ul class="nav navbar-nav float-right">  --}}
+              {{--  <li class="dropdown dropdown-notification nav-item"><a class="nav-link nav-link-label" href="#" data-toggle="dropdown"><i class="ficon ft-mail">             </i></a>  --}}
+                {{--  <div class="dropdown-menu dropdown-menu-right">  --}}
+                  {{--  <div class="arrow_box_right"><a class="dropdown-item" href="#"><i class="ft-book"></i> Read Mail</a><a class="dropdown-item" href="#"><i class="ft-bookmark"></i> Read Later</a><a class="dropdown-item" href="#"><i class="ft-check-square"></i> Mark all Read       </a></div>  --}}
+                {{--  </div>  --}}
+              {{--  </li>  --}}
+              {{--  <li class="dropdown dropdown-user nav-item"><a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">             <span class="avatar avatar-online"><img src="theme-assets/images/portrait/small/avatar-s-19.png" alt="avatar"><i></i></span></a>  --}}
+                {{--  <div class="dropdown-menu dropdown-menu-right">  --}}
+                  {{--  <div class="arrow_box_right"><a class="dropdown-item" href="#"><span class="avatar avatar-online"><img src="theme-assets/images/portrait/small/avatar-s-19.png" alt="avatar"><span class="user-name text-bold-700 ml-1">John Doe</span></span></a>  --}}
+                    {{--  <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="ft-user"></i> Edit Profile</a><a class="dropdown-item" href="#"><i class="ft-mail"></i> My Inbox</a><a class="dropdown-item" href="#"><i class="ft-check-square"></i> Task</a><a class="dropdown-item" href="#"><i class="ft-message-square"></i> Chats</a>  --}}
+                    {{--  <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="ft-power"></i> Logout</a>  --}}
+                  {{--  </div>  --}}
+                {{--  </div>  --}}
+              {{--  </li>  --}}
+            {{--  </ul>  --}}
+          {{--  </div>  --}}
+        {{--  </div>  --}}
+      {{--  </div>  --}}
+    {{--  </nav>  --}}
 
-	{{ script('assets/theme/js/jquery-3.js') }}
-	{{ script('assets/theme/js/bootstrap.js') }}
-	{{ script('assets/global/js/app.js') }}
+	@include('layout._leftbar')
+	{{--  @!section('content')  --}}
+    <div class="app-content content">
+      <div class="content-wrapper">
+        {{--  <div class="content-wrapper-before"></div>  --}}
+        <div class="content-header row">
+        </div>
+        <div class="content-body"><!-- Chart -->
+		{{--  <div class="row match-height">  --}}
+			{{--  <div class="col-12">  --}}
+				{{--  <div class="">  --}}
+					{{--  <div id="gradient-line-chart1" class="height-250 GradientlineShadow1"></div>  --}}
+				{{--  </div>  --}}
+			{{--  </div>  --}}
+		{{--  </div>  --}}
+		
 
-	@!section('script')
+		<div class="row">
+			<div class="card-columns">
+				<div class="card pull-up ecom-card-1 bg-white">
+						<div class="card-content ecom-card2">
+								<h5 class="text-muted warning position-absolute p-1">Sales Stats</h5>
+								<div>
+									<i class="ft-shopping-cart warning font-large-1 float-right p-1"></i>
+								</div>
+								<div class="progress-stats-container ct-golden-section height-75 position-relative pt-3">
+									<div id="progress-stats-bar-chart2"></div>
+									<div id="progress-stats-line-chart2" class="progress-stats-shadow"></div>
+								</div>
+							</div>
+				  <div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				  </div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+						<div class="card-content ecom-card2">
+								<h5 class="text-muted warning position-absolute p-1">Sales Stats</h5>
+								<div>
+									<i class="ft-shopping-cart warning font-large-1 float-right p-1"></i>
+								</div>
+								<div class="progress-stats-container ct-golden-section height-75 position-relative pt-3">
+									<div id="progress-stats-bar-chart2"></div>
+									<div id="progress-stats-line-chart2" class="progress-stats-shadow"></div>
+								</div>
+							</div>
+				  <div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				  </div>
+				</div>
+			
+				<div class="card pull-up ecom-card-1 bg-white">
+				  <img class="card-img-top" src="..." alt="Card image cap">
+				  <div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				  </div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+				  <img class="card-img-top" src="..." alt="Card image cap">
+				  <div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				  </div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+				  <img class="card-img-top" src="..." alt="Card image cap">
+				  <div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				  </div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+				  <img class="card-img-top" src="..." alt="Card image cap">
+				  <div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				  </div>
+				</div>
+			
+				<div class="card pull-up ecom-card-1 bg-white">
+				  <img class="card-img-top" src="..." alt="Card image cap">
+				  <div class="card-body">
+					<h5 class="card-title">Card title that wraps to a new line</h5>
+					<p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+				  </div>
+				</div>
+			
+			  </div>
+		</div>
 
-</body>
+      </div>
+    </div>
+    <!-- ////////////////////////////////////////////////////////////////////////////-->
 
+{{--  
+    <footer class="footer footer-static footer-light navbar-border navbar-shadow">
+      <div class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2"><span class="float-md-left d-block d-md-inline-block">2018  &copy; Copyright <a class="text-bold-800 grey darken-2" href="https://themeselection.com" target="_blank">ThemeSelection</a></span>
+        <ul class="list-inline float-md-right d-block d-md-inline-blockd-none d-lg-block mb-0">
+          <li class="list-inline-item"><a class="my-1" href="https://themeselection.com/" target="_blank"> More themes</a></li>
+          <li class="list-inline-item"><a class="my-1" href="https://themeselection.com/support" target="_blank"> Support</a></li>
+          <li class="list-inline-item"><a class="my-1" href="https://themeselection.com/products/chameleon-admin-modern-bootstrap-webapp-dashboard-html-template-ui-kit/" target="_blank"> Purchase</a></li>
+        </ul>
+      </div>
+    </footer>  --}}
+
+    {{script('theme-assets/vendors/js/vendors.min.js')}}
+    {{script('theme-assets/vendors/js/charts/chartist.min.js')}}
+    {{script('theme-assets/js/core/app-menu-lite.js')}}
+    {{script('theme-assets/js/core/app-lite.js')}}
+    {{script('theme-assets/js/scripts/pages/dashboard-lite.js')}}
+  </body>
 </html>
