--- a/resources/views/user/home.edge
+++ b/resources/views/user/home.edge
@@ -1,35 +1,100 @@
 @layout('layout.main')
 @section('style')
 {{ style('assets/components/card-note/css/card-note.css') }}
+{{ style('assets/components/searchbar/css/searchbar.css') }}
 @endsection
 @section('content')
-<div id="content">
-	@include('layout._searchbar')
+<div id="content" class="app-content content">
+	<div class="content-body">
+		@include('layout._searchbar')
 
-	<div id="content-page" class="container-fluid">
-		<div class="col-lg-12">
-			<div id="card-post" class="card-columns">
-				@each(post in notes)
-				<div id="{{post._id}}" data-note='{{post}}' onclick="read(this)" class="card">
-					<svg class="bd-placeholder-img card-img-top" width="100%" height="160"
-						xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-						role="img" aria-label="Placeholder: Image cap">
-						<title>Placeholder</title>
-						<rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6"
-							dy=".3em">Image cap</text>
-					</svg>
+		<div class="row">
+			<div class="card-columns">
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
 						<h5 class="card-title">Card title that wraps to a new line</h5>
-						<p class="card-text">This is a longer card with supporting text below as a natural
-							lead-in
-							to
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little additional content. This content is a little additional content. This content is a little additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new lCard title that wraps to a new lCard title that wraps to a new lCard title that wraps to a new lCard title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
 							additional content. This content is a little bit longer.</p>
 					</div>
 				</div>
-				@endeach
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+								additional content. This content is a little badditional content. This content is a little badditional content. This content is a little badditional content. This content is a little badditional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
 
 			</div>
 		</div>
+
 	</div>
 </div>
 @endsection
