--- a/resources/views/layout/_leftbar.edge
+++ b/resources/views/layout/_leftbar.edge
@@ -1,31 +1,22 @@
-<div class="main-menu menu-fixed menu-light menu-accordion    menu-shadow " data-scroll-to-active="true" data-img="theme-assets/images/backgrounds/02.jpg">
-	<div class="navbar-header">
+<div style="width:90px;" class="main-menu menu-fixed menu-light menu-accordion menu-shadow " data-scroll-to-active="true">
+	<div style="width:90px;" class="navbar-header">
 	  <ul class="nav navbar-nav flex-row">       
-		<li class="nav-item mr-auto"><a class="navbar-brand" href="index.html"><img class="brand-logo" alt="Chameleon admin logo" src="theme-assets/images/logo/logo.png"/>
-			<h3 class="brand-text">Chameleon</h3></a></li>
+		<li class="nav-item mr-auto"><a class="navbar-brand" href="#">
+			{{--  <img class="brand-logo" alt="Chameleon admin logo" src="theme-assets/images/logo/logo.png"/>  --}}
+			<h3 class="brand-text">NG</h3></a></li>
 		<li class="nav-item d-md-none"><a class="nav-link close-navbar"><i class="ft-x"></i></a></li>
 	  </ul>
 	</div>
-	<div class="main-menu-content">
-	  <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
-		<li class="active"><a href="index.html"><i class="ft-home"></i><span class="menu-title" data-i18n="">Dashboard</span></a>
-		</li>
-		<li class=" nav-item"><a href="charts.html"><i class="ft-pie-chart"></i><span class="menu-title" data-i18n="">Charts</span></a>
-		</li>
-		<li class=" nav-item"><a href="icons.html"><i class="ft-droplet"></i><span class="menu-title" data-i18n="">Icons</span></a>
-		</li>
-		<li class=" nav-item"><a href="cards.html"><i class="ft-layers"></i><span class="menu-title" data-i18n="">Cards</span></a>
-		</li>
-		<li class=" nav-item"><a href="buttons.html"><i class="ft-box"></i><span class="menu-title" data-i18n="">Buttons</span></a>
-		</li>
-		<li class=" nav-item"><a href="typography.html"><i class="ft-bold"></i><span class="menu-title" data-i18n="">Typography</span></a>
-		</li>
-		<li class=" nav-item"><a href="tables.html"><i class="ft-credit-card"></i><span class="menu-title" data-i18n="">Tables</span></a>
-		</li>
-		<li class=" nav-item"><a href="form-elements.html"><i class="ft-layout"></i><span class="menu-title" data-i18n="">Form Elements</span></a>
-		</li>
-		<li class=" nav-item"><a href="https://themeselection.com/demo/chameleon-admin-template/documentation"><i class="ft-book"></i><span class="menu-title" data-i18n="">Documentation</span></a>
-		</li>
+	<div style="height: 100%;" class="main-menu-content">
+		<ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
+			<li class="{{notes.write}}"><a class="menu-link" href="/"><i class="la la-pencil"></i><span class="menu-title" data-i18n=""></span></a>
+			</li>
+			<li class="{{notes.board}}"><a class="menu-link" href="board"><i class="la la-folder-o"></i><span class="menu-title" data-i18n=""></span></a>
+			</li>
+			<li class="{{notes.trash}}"><a class="menu-link" href="icons.html"><i class="la la-trash"></i><span class="menu-title" data-i18n=""></span></a>
+			</li>
+			<li class="{{notes.setting}}"><a class="menu-link" href="icons.html"><i class="la la-gear"></i><span class="menu-title" data-i18n=""></span></a>
+			</li>
 	  </ul>
 	</div>
 	<div class="navigation-background"></div>
