--- a/resources/views/layout/_searchbar.edge
+++ b/resources/views/layout/_searchbar.edge
@@ -1,5 +1,8 @@
-    <nav id="searchbar" class="navbar navbar-light bg-light col-lg-12">
-    	<div class="col-8 align-center">
-    		<input class="width-full form-control" type="search" placeholder="Search" aria-label="Search">
+    <nav id="searchbar" class="navbar col-lg-12">
+    	<div class="col-8 shadow-5 center card pull-up ecom-card-1 bg-white">
+    		<input id="inSearchbar" class="width-full form-control" type="search" placeholder="Search" aria-label="Search">
     	</div>
-    </nav>
+	</nav>
+	
+
+	
