--- a/resources/views/user/board.edge
+++ b/resources/views/user/board.edge
@@ -1,112 +1,104 @@
 @layout('layout.main')
+@section('style')
+{{ style('assets/components/card-note/css/card-note.css') }}
+{{ style('assets/components/searchbar/css/searchbar.css') }}
+@endsection
 @section('content')
-<div id="content">
-	@include('layout._searchbar')
+<div id="content" class="app-content content">
+	<div class="content-body">
+		@include('layout._searchbar')
 
-	<div id="content-page" class="container-fluid">
 		<div class="row">
-			<div class="board-user">
-				<div class="card">
-					<img src="assets/global/images/temp/book.jpg" class="card-img-top" alt="book">
+			<div class="card-columns">
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural
-							lead-in to
-							additional content. This content is a little bit longer.</p>
-					</div>
-					<div class="card-footer">
-						<small class="text-muted">Last updated 3 mins ago</small>
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little additional content. This content is a little additional content. This content is a little additional content. This content is a little bit longer.</p>
 					</div>
 				</div>
-			</div>
-			<div class="board-user">
-				<div class="card">
-					<img src="assets/global/images/temp/book.jpg" class="card-img-top" alt="book">
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural
-							lead-in to
+						<h5 class="card-title">Card title that wraps to a new lCard title that wraps to a new lCard title that wraps to a new lCard title that wraps to a new lCard title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
 							additional content. This content is a little bit longer.</p>
 					</div>
-					<div class="card-footer">
-						<small class="text-muted">Last updated 3 mins ago</small>
-					</div>
 				</div>
-			</div>
-			<div class="board-user">
-				<div class="card">
-					<img src="assets/global/images/temp/book.jpg" class="card-img-top" alt="book">
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural
-							lead-in to
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
 							additional content. This content is a little bit longer.</p>
 					</div>
-					<div class="card-footer">
-						<small class="text-muted">Last updated 3 mins ago</small>
-					</div>
 				</div>
-			</div>
-			<div class="board-user">
-				<div class="card">
-					<img src="assets/global/images/temp/book.jpg" class="card-img-top" alt="book">
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural
-							lead-in to
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
 							additional content. This content is a little bit longer.</p>
 					</div>
-					<div class="card-footer">
-						<small class="text-muted">Last updated 3 mins ago</small>
-					</div>
 				</div>
-			</div>
-			<div class="board-user">
-				<div class="card">
-					<img src="assets/global/images/temp/book.jpg" class="card-img-top" alt="book">
+
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural
-							lead-in to
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
 							additional content. This content is a little bit longer.</p>
 					</div>
-					<div class="card-footer">
-						<small class="text-muted">Last updated 3 mins ago</small>
-					</div>
 				</div>
-			</div>
-			<div class="board-user">
-				<div class="card">
-					<img src="assets/global/images/temp/book.jpg" class="card-img-top" alt="book">
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural
-							lead-in to
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
 							additional content. This content is a little bit longer.</p>
 					</div>
-					<div class="card-footer">
-						<small class="text-muted">Last updated 3 mins ago</small>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+								additional content. This content is a little badditional content. This content is a little badditional content. This content is a little badditional content. This content is a little badditional content. This content is a little bit longer.</p>
 					</div>
 				</div>
-			</div>
-			<div class="board-user">
-				<div class="card">
-					<img src="assets/global/images/temp/book.jpg" class="card-img-top" alt="book">
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">This is a wider card with supporting text below as a natural
-							lead-in to
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
 							additional content. This content is a little bit longer.</p>
 					</div>
-					<div class="card-footer">
-						<small class="text-muted">Last updated 3 mins ago</small>
+				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
 					</div>
 				</div>
+				<div class="card pull-up ecom-card-1 bg-white">
+					<img class="card-img-top" src="..." alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Card title that wraps to a new line</h5>
+						<p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+							additional content. This content is a little bit longer.</p>
+					</div>
+				</div>
+
 			</div>
 		</div>
+
 	</div>
 </div>
 @endsection
 @section('script')
 {{ script('assets/components/searchbar/js/searchbar.js') }}
+{{ script('assets/components/card-note/js/card-note.js') }}
 @endsection
