--- a/public/assets/global/css/media.css
+++ b/public/assets/global/css/media.css
@@ -1,175 +1,17 @@
-/* left side and content ----------------------- */
-@media (min-width: 240px) {
-	#sidebar {
-		width: 20%;
-	}
+
+@media (max-width: 768px) {
 
 	#content {
-		width: 80%;
+		margin: 0;
+		margin-top:45px;
+		margin-left:45px;
+		margin-right:45px;
 	}
 }
 
-@media (min-width: 360px) {
-	#sidebar {
-		width: 15%;
-	}
-
-	#content {
-		width: 85%;
-	}
-}
-
-@media (min-width: 490px) {
-	#sidebar {
-		width: 12%;
-	}
-
-	#content {
-		width: 88%;
-	}
-}
-
-@media (min-width: 790px) {
-	#sidebar {
-		width: 8%;
-	}
-
-	#content {
-		width: 92%;
-	}
-}
-
-@media (min-width: 960px) {
-	#sidebar {
-		width: 7%;
-	}
-
-	#content {
-		width: 93%;
-	}
-}
-
-@media (min-width: 1200px) {
-	#sidebar {
-		width: 5%;
-	}
-
-	#content {
-		width: 95%;
-	}
-}
-
-/* end left side and content ----------------------- */
-
-
-/* card coloum post  --------------------------- */
-@media (min-width: 360px) {
-	.card-columns {
-		-webkit-column-count: 1;
-		-moz-column-count: 1;
-		column-count: 1;
-		-webkit-column-gap: 1.25rem;
-		-moz-column-gap: 1.25rem;
-		column-gap: 1.25rem;
-		orphans: 1;
-		widows: 1;
-	}
-}
-
-@media (min-width: 480px) {
-	.card-columns {
-		-webkit-column-count: 2;
-		-moz-column-count: 2;
-		column-count: 2;
-		-webkit-column-gap: 1.25rem;
-		-moz-column-gap: 1.25rem;
-		column-gap: 1.25rem;
-		orphans: 1;
-		widows: 1;
-	}
-}
 
 @media (min-width: 768px) {
 	.card-columns {
-		-webkit-column-count: 3;
-		-moz-column-count: 3;
-		column-count: 3;
-		-webkit-column-gap: 1.25rem;
-		-moz-column-gap: 1.25rem;
-		column-gap: 1.25rem;
-		orphans: 1;
-		widows: 1;
-	}
-}
-
-@media (min-width: 992px) {
-	.card-columns {
-		-webkit-column-count: 4;
-		-moz-column-count: 4;
-		column-count: 4;
-		-webkit-column-gap: 1.25rem;
-		-moz-column-gap: 1.25rem;
-		column-gap: 1.25rem;
-		orphans: 1;
-		widows: 1;
-	}
-}
-
-@media (min-width: 1240px) {
-	.card-columns {
-		-webkit-column-count: 5;
-		-moz-column-count: 5;
 		column-count: 5;
-		-webkit-column-gap: 1.25rem;
-		-moz-column-gap: 1.25rem;
-		column-gap: 1.25rem;
-		orphans: 1;
-		widows: 1;
 	}
 }
-
-/* end card coloum post  --------------------------- */
-
-
-
-/* card coloumn board */
-
-@media (min-width: 240px) {
-	.board-user {
-		max-width: 85%;
-		margin: auto;
-	}
-}
-
-@media (min-width: 360px) {
-	.board-user {
-		max-width: 50%;
-		margin: 0;
-	}
-}
-
-@media (min-width: 560px) {
-	.board-user {
-		max-width: 33%;
-		margin: 0;
-
-	}
-}
-
-@media (min-width: 720px) {
-	.board-user {
-		max-width: 25%;
-		margin: 0;
-
-	}
-}
-
-@media (min-width: 960px) {
-	.board-user {
-		max-width: 20%;
-		margin: 0;
-
-	}
-}
-
-/* end card coloumn board */
