--- a/public/assets/global/css/app.css
+++ b/public/assets/global/css/app.css
@@ -1,42 +1,20 @@
-html,
-body {
-	width: 100%;
-	height: 100%;
-
-	padding: 0;
-	margin: 0;
+#content{
+	margin-left:120px;
+	margin-right:30px;
+	transition: top 0.8s;
+    padding: 30px;
 }
 
-.width-full {
-	width: 100%;
+.center{
+	margin-left: auto;
+	margin-right: auto;
 }
 
-.align-center {
-	margin: auto;
+.shadow-5{
+	box-shadow: 0px 1px 15px 5px rgba(0,0,0,0.2);
+	transition: 0.3s;
 }
 
-.text-align-center {
-	text-align: center;
-}
-
-.color-white {
-	background-color: #fafafa !important;
-}
-
-.text-content {
-	word-wrap: break-word;
-	word-break: break-all;
-}
-
-[contenteditable]:focus {
-	outline: 0px solid transparent;
-}
-
-#web-content {
-	width: 100%;
-	height: 100%;
-}
-
-#content-page {
-	margin-top: 5%;
+#inSearchbar:focus {
+    outline: none !important;
 }
