--- a/resources/views/layout/_leftbar.edge
+++ b/resources/views/layout/_leftbar.edge
@@ -11,7 +11,7 @@
 		<ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
 			<li class="{{notes.write}}"><a class="menu-link" href="/"><i class="la la-pencil"></i><span class="menu-title" data-i18n=""></span></a>
 			</li>
-			<li class="{{notes.board}}"><a class="menu-link" href="board"><i class="la la-folder-o"></i><span class="menu-title" data-i18n=""></span></a>
+			<li class="{{notes.board}}"><a class="menu-link" href="/board"><i class="la la-folder-o"></i><span class="menu-title" data-i18n=""></span></a>
 			</li>
 			<li class="{{notes.trash}}"><a class="menu-link" href="icons.html"><i class="la la-trash"></i><span class="menu-title" data-i18n=""></span></a>
 			</li>
