--- a/resources/views/user/write.edge
+++ b/resources/views/user/write.edge
@@ -7,52 +7,73 @@
 
 @section('content')
 <div id="content">
-	<div class="col-lg-8 col-md-10 col-sm-10 align-center">
-		<div id=editor class="jumbotron color-white">
-			<h1 class="note title-note text-content display-4 focus-content" contenteditable="true" data-note="title">
-				@if(note[0].title)
-				{{note[0].title}}
-				@else
-				Title
-				@endif
-			</h1>
-			<p class="note lable-note text-content lead" contenteditable="true" data-note="lable">
-				@if(note[0].lable)
-				@each(lable in note[0].lable)
-				#{{lable}}
-				@endeach
-				@else
-				#Lable
-				@endif
-			</p>
-			<hr class="my-2">
-			<p class="note decs-note text-content " contenteditable="true" data-note="desc">Description</p>
-			<div class="section">
-				<p class="note text-note text-content " contenteditable="true" data-note="section-text">
-					@if(note[0].section)
-					@each(section in note[0].section)
-					@if(section.flag=="section-text")
-					{{section.val}}
-					@elseif(section.flag=="section-img")
-					{{section.val}}
-					@else
-					{{section.val}}
-					@endif
-					@endeach
-					@else
-					Section
-					@endif
-				</p>
+	<div class="col-sm-12 col-md-12 col-lg-12">
+		<div id="editor">
+			<div class="card">
+				<div class="card-header">
+					<h1 class="card-title note title-note text-content display-4" contenteditable="true" data-note="title">
+						@if(note[0].title)
+						{{note[0].title}}
+						@else
+						Title
+						@endif
+					</h1>
+					<p class="note lable-note text-content lead" contenteditable="true" data-note="lable">
+						@if(note[0].lable)
+						@each(lable in note[0].lable)
+						#{{lable}}
+						@endeach
+						@else
+						#Lable
+						@endif
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<div class="card-content">
+					<div class="card-header">
+						<div class="heading-elements">
+							<ul class="list-inline mb-0">
+								<li><a data-action="close"><i class="ft-x"></i></a></li>
+							</ul>
+						</div>
+						<p class="note text-note text-content " contenteditable="true" data-note="section-text">
+								@if(note[0].section)
+								@each(section in note[0].section)
+								@if(section.flag=="section-text")
+								{{section.val}}
+								@elseif(section.flag=="section-img")
+								{{section.val}}
+								@else
+								{{section.val}}
+								@endif
+								@endeach
+								@else
+								Section
+								@endif
+							</p>
+					</div>
+					<div class="card-body">
+						<div class="section">
+							<p class="note text-note text-content " contenteditable="true" data-note="section-text">
+								ss
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="col-lg-12 text-align-center">
-			<div class="btn-group" role="group" aria-label="Basic example">
-				<button type="button" class="btn-circle-100 btn-secondary note-btn-section">section</button>
-				<button type="button" class="btn-circle-100 btn-secondary note-btn-image">image</button>
-				<!-- <button type="button" class="btn-circle-100 btn-secondary">Middle</button>
+
+		
+	</div>
+	<div class="col-lg-8 col-md-10 col-sm-10 align-center">
+
+		<div class="btn-group" role="group" aria-label="Basic example">
+			<button type="button" class="btn-circle-100 btn-secondary note-btn-section">section</button>
+			<button type="button" class="btn-circle-100 btn-secondary note-btn-image">image</button>
+			<!-- <button type="button" class="btn-circle-100 btn-secondary">Middle</button>
 				<button type="button" class="btn-circle-100 btn-secondary">Middle</button>
 				<button type="button" class="btn-circle-100 btn-secondary">Right</button> -->
-			</div>
 		</div>
 		<div class="float-button-save col-md-8">
 			<button type="button" id="sidebarCollapse" class="btn btn-info">
