--- a/public/assets/components/right-menu/css/right-menu.css
+++ b/public/assets/components/right-menu/css/right-menu.css
@@ -1,39 +1,19 @@
-#right-menu {
-	right: -8%;
-	top: 0px;
-	position: fixed;
-	width: 5%;
-	height: 100vh;
-	transition: right 0.5s;
-	background-color: rgb(228, 14, 14);
+.editor-menu{
+	height: 50px;
 }
 
-.buttons-editor-menu {
-	width: 100%;
-	height: 60%;
-	table-layout: fixed;
-	border-collapse: collapse;
+.menu-editor{
+	top: 0% !important;
 }
 
-.spawn-tbody {
-	width: 100%;
-	height: 20%;
+#menu-1{
+	top: 5% !important;
 }
 
-
-.buttons-editor-menu button {
-	width: 100%;
-	height: 40px;
+#menu-2{
+	top: 15% !important;
 }
 
-@media (min-width: 240px) {
-	#right-menu {
-		width: 8%;
-	}
-}
-
-@media (min-width: 960px) {
-	#right-menu {
-		width: 5%;
-	}
+#menu-3{
+	top: 25% !important;
 }
